# k8s_api_gateway_proxy_mesh_test

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  .rust-toolchain.toml  .versionrc  .vscodeignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.t  Makefile  NOTE.md  README.md  START.md  Untitled-1  VERSION.md  en_US.dic
.cargo/: config.toml  spellcheck.toml  topic.dic
.cargo-husky/hooks/: pre-commit  pre-push
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/actions/package/: Dockerfile
.github/actions/release-tag-meta/: Dockerfile
.github/workflows/: check.yml  release.yml
.gitlab/: PULL_REQUEST_TEMPLATE.md
doc/: - NOTE.md  BRANCHING.md  LABEL.md  LABELS.md  NOTE.md  PIPELINE.md  README.md  RUSTUP.md  START_RUST.md  VERSIONING.md  label.md
doc/doc/: BAZEL.md  CODING_STANDARDS.md  DEVELOPER.md  FIXUP_COMMITS.md  NAMING.md  PUBLIC_API.md  SAVED_REPLIES.md  TRIAGE_AND_LABELS.md
fip_api/: .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.scratch  build.rs  fip_api_service.yml
fip_api/proto/: api_api.proto
fip_api/src/: config.rs  main.rs  server.rs
fip_api/src/api/: config.rs  controller.rs  server.rs  service.rs
fip_common/: Cargo.toml
fip_common/src/: common_error.rs
script/: changelog.sh  kind-with-registry.sh  perf.sh  tag.sh
