[dependencies]
opentelemetry = { default-features = false, features = ["trace"], version = "0.14.0" }
thiserror = { default-features = false, version = "1.0.25" }
tonic = { default-features = false, features = ["transport"], version = "0.4.3" }
tracing-error = { default-features = false, version = "0.1.2" }

[dev-dependencies]
cargo-husky = { default-features = false, features = ["user-hooks"], version = "1.5.0" }

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
categories = ["network-programming"]
description = "fip_common"
edition = "2018"
homepage = ""
include = ["src/**/*"]
keywords = ["fpi", "common"]
license = "MIT"
name = "fip_common"
publish = false
repository =  "https://github.com/smhmayboudi/fip"
version = "0.1.0"
