# [[bench]]

# [[bin]]

# [[example]]

# [[test]]

# [badges]

# [build-dependencies]

[dependencies]
opentelemetry = { default-features = false, features = ["trace"], version = "0.15.0" }
thiserror = { default-features = false, version = "1.0.26" }
tonic = { default-features = false, features = ["transport"], version = "0.5.2" }
tracing-error = { default-features = false, version = "0.1.2" }

[dev-dependencies]
cargo-husky = { default-features = false, features = ["user-hooks"], version = "1.5.0" }
# mockall = { default-features = false, features = ["user-hooks"], version = "0.10.1" }

# [features]

[lib]
# bench = true          # Is benchmarked by default.
crate-type = ["rlib"]   # The crate types to generate.
# doc = true            # Is documented by default.
# doctest = true        # Documentation examples are tested by default.
# edition = "2018"      # The edition of the target.
# harness = true        # Use libtest harness.
name = "fip_common"     # The name of the target.
path = "src/lib.rs"     # The source file of the target.
# proc-macro = false    # Set to `true` for a proc-macro library.
# required-features = []# Features required to build this target (N/A for lib).
# test = true           # Is tested by default.

[package]
authors = ["Hossein Mayboudi <smhmayboudi@gmail.com>"]
categories = ["network-programming"]
description = "fip_common"
edition = "2018"
homepage = ""
include = ["src/**/*"]
keywords = [
    "fip",
    "common",
]
license = "MIT"
name = "fip_common"
publish = false
repository =  "https://github.com/smhmayboudi/k8s_api_gateway_proxy_mesh_test"
version = "0.1.0"

# [profile]

# [patch]

# [replace]

# [workspace]
